module(
    name = "hashtree",
    version = "0.2.0",
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")
go_sdk.nogo(nogo = "//:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# This can be updated after adding something to go.mod with:
# bazel mod tidy
use_repo(
    go_deps,
    "com_github_klauspost_cpuid_v2",
)
